RELEASE NOTES 


0.2.9
---------------------------
Updates
- added method add_items_from_list()


0.2.8
---------------------------
Updates
- added attribute freq_count to class ExtGP


0.2.7
---------------------------
Updates
- renamed class GP4sw to ExtGP (stands for Extended GP)
- renamed class DataGP4clu to CluDataGP (stands for Clustering DataGP)
- added description statements to functions


0.2.6
---------------------------
Bug fixes
- clustering attributes missing


0.2.5
-----------------------------

Updates
- added clugps funtion
- added class DataGP4clu
- updated README
- added compare_gps function


0.2.4
-----------------------------

Updates
- renamed functions
- added class GP4sw
- added class NumericSS
- count invalid GPs


0.2.3
-----------------------------

Updates
- count invalid GPs in GRAANK and ACO-GRAD


0.2.2
-----------------------------

Bug fixes
- fixed import error on plot_curve


0.2.1
-----------------------------

Bug fixes
- problem with import (removed matplotlib package)


0.2.0
-----------------------------

Updates
- removed Profile class
- converted bitmap method into a class method
- added 4 methods for getting cpus, writing results, plotting evaluations


0.1.9
-----------------------------

Bug fixes
- problem with import (class Profile not Found)


0.1.8
-----------------------------

Updates
- added Profile class for profiling performance


0.1.7
-----------------------------

Updates
- removed method for computing net-wins matrix


0.1.6
-----------------------------

Updates
- added method for computing net-wins matrix


0.1.5
-----------------------------

Updates
- added ability to return GPs as objects (using parameter 'return_gps=True')
- added docstrings to describe functionality


0.1.4
-----------------------------

Bug fixes
- problem with import (Module not Found)


0.1.3
-----------------------------

Renamed methods to simpler words


0.1.2
-----------------------------

Updated documentation and README